--- a/styles/sass/abstracts/mixins/_header-mixins.sass
+++ b/styles/sass/abstracts/mixins/_header-mixins.sass
@@ -2,30 +2,23 @@
 @use '../_varibles' as *
 @use './_common-mixins' as *
 @use '../../../../node_modules/breakpoint-slicer' as bs
-    
-@mixin submenu
-    >.submenu
-        &.display-none
-            display: none
-        transition: $trs-basic
-        position: absolute
-        transform: translateX(-50%)
-        text-transform: uppercase
-        font-size: .9em
-        width: 10em
-        background-color: $bgc-subsidiary-subtle
-        box-shadow: $bs-card-lg
-        opacity: 0
-        z-index: -1
-        &.open
-            opacity: 1
-            z-index: 5
-        >ul
-            >li
-                >a
-                    padding: .8em .5em
-                    width: 100%
-                    display: block
-                    &:hover
-                        background-color: $bgc-subsidiary-hilight
-                        color: $fc-important
+
+@mixin sublinks
+    position: absolute
+    top: 80%
+    left: -.5em
+    z-index: -10
+    opacity: 0
+    background-color: $bgc-subsidiary
+    transition: $trs-instant
+    &.display
+        opacity: 1
+        z-index: 10
+    >ul
+        @include grid($columns: 1fr)
+        text-transform: capitalize
+        >li >a
+            @include flex($gap: 1em)
+            padding: .8em .5em
+            &:hover
+                background: $bgc-subsidiary-hilight
