--- a/styles/sass/components/_home.sass
+++ b/styles/sass/components/_home.sass
@@ -213,7 +213,7 @@
     >.special-card-container
         >div:nth-child(1)
             @include home-content-title
-        >div:nth-child(2)
+        >div.special-card-slider
             @include flex($gap: .5em)
             >a
                 @include gradient($deg-gradient: 90deg, $first-gradient: $bgc-subsidiary, $first-percent: 20%, $second-gradient: $bgc-default )
